tests/error/test2.src
.IPPcode18
defvar int@5